tests/diagnostics_golden/diag_observe_requires_access.txt
Diagnostics Golden: Removed Explicit Dereference
Source: tests/negative/neg_own_observe_requires_access.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_observe_requires_access.safe:14:20: error: removed source spelling `.all` is not allowed in postfix selectors
  |
  | 14 |       return owner.all.rate
  |    |                    ^~~
  |
------------------------------------------------------------------------
